// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkBookPackage() -  rut should pass 1`] = `
Object {
  "checkedFilenames": Array [
    "08-RUT.usfm",
    "08-RUT.usfm",
    "08-RUT.usfm",
    "en_tn_08-RUT.tsv",
  ],
  "checkedRepoNames": Array [
    "UHB",
    "ULT",
    "UST",
    "TN",
  ],
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "9",
      "bookID": "rut",
      "characterIndex": 52,
      "extra": "TN",
      "extract": "…ality - th…",
      "fieldName": "OccurrenceNote",
      "filename": "en_tn_08-RUT.tsv",
      "lineNumber": 92,
      "location": " in en rut book package from unfoldingWord master branch",
      "message": "Unexpected - character after space",
      "priority": 191,
      "rowID": "xc6u",
    },
    Object {
      "C": "4",
      "V": "14",
      "bookID": "rut",
      "characterIndex": 155,
      "extra": "TN",
      "extract": "…” or “ we …",
      "fieldName": "OccurrenceNote",
      "filename": "en_tn_08-RUT.tsv",
      "lineNumber": 255,
      "location": " in en rut book package from unfoldingWord master branch",
      "message": "Unexpected space after “ character",
      "priority": 192,
      "rowID": "ab47",
    },
  ],
  "successList": Array [
    "Checked UHB file: 08-RUT.usfm",
    "Checked ULT file: 08-RUT.usfm",
    "Checked UST file: 08-RUT.usfm",
    "Checked TN file: en_tn_08-RUT.tsv",
  ],
}
`;

exports[`checkBookPackage() -  tit should fail on missing repo 1`] = `
Object {
  "checkedFilenames": Array [
    "57-TIT.usfm",
    "57-TIT.usfm",
    "en_tn_57-TIT.tsv",
  ],
  "checkedRepoNames": Array [
    "UGNT",
    "UST",
    "TN",
  ],
  "noticeList": Array [
    Object {
      "bookID": "tit",
      "extra": "ULT",
      "filename": "57-TIT.usfm",
      "location": " in ULT in en tit book package from unfoldingWord master branch: Simulated error - Could not find src/__tests__/fixtures/unfoldingWord/en_ult/57-TIT.usfm",
      "message": "Failed to load",
      "priority": 996,
      "repoName": "en_ult",
    },
  ],
  "successList": Array [
    "Checked UGNT file: 57-TIT.usfm",
    "Checked UST file: 57-TIT.usfm",
    "Checked TN file: en_tn_57-TIT.tsv",
  ],
}
`;

exports[`checkBookPackage() -  tit should fail on unsupported language 1`] = `
Object {
  "checkedFilenames": Array [
    "57-TIT.usfm",
  ],
  "checkedRepoNames": Array [
    "UGNT",
  ],
  "noticeList": Array [
    Object {
      "bookID": "tit",
      "extra": "GLT",
      "filename": "57-TIT.usfm",
      "location": " in GLT in zzz tit book package from unfoldingWord master branch: Could not find src/__tests__/fixtures/unfoldingWord/zzz_glt/57-TIT.usfm",
      "message": "Failed to load",
      "priority": 996,
      "repoName": "zzz_glt",
    },
    Object {
      "bookID": "tit",
      "extra": "GST",
      "filename": "57-TIT.usfm",
      "location": " in GST in zzz tit book package from unfoldingWord master branch: Could not find src/__tests__/fixtures/unfoldingWord/zzz_gst/57-TIT.usfm",
      "message": "Failed to load",
      "priority": 996,
      "repoName": "zzz_gst",
    },
    Object {
      "bookID": "tit",
      "extra": "TN",
      "filename": "zzz_tn_57-TIT.tsv",
      "location": " in TN in zzz tit book package from unfoldingWord master branch: Could not find src/__tests__/fixtures/unfoldingWord/zzz_tn/zzz_tn_57-TIT.tsv",
      "message": "Failed to load",
      "priority": 996,
      "repoName": "zzz_tn",
    },
  ],
  "successList": Array [
    "Checked UGNT file: 57-TIT.usfm",
  ],
}
`;

exports[`checkBookPackage() -  tit should pass 1`] = `
Object {
  "checkedFilenames": Array [
    "57-TIT.usfm",
    "57-TIT.usfm",
    "57-TIT.usfm",
    "en_tn_57-TIT.tsv",
  ],
  "checkedRepoNames": Array [
    "UGNT",
    "ULT",
    "UST",
    "TN",
  ],
  "noticeList": Array [],
  "successList": Array [
    "Checked UGNT file: 57-TIT.usfm",
    "Checked ULT file: 57-TIT.usfm",
    "Checked UST file: 57-TIT.usfm",
    "Checked TN file: en_tn_57-TIT.tsv",
  ],
}
`;
